--- a/src/shared/elements/Select/MonsterSelect.scss
+++ b/src/shared/elements/Select/MonsterSelect.scss
@@ -67,3 +67,11 @@
 .ant-select-item-option-active {
   background-color: #36395a !important;
 }
+
+.monster-select.ant-select .ant-select-selection-item-remove {
+  color: #515aca !important;
+}
+
+.monster-select.ant-select .ant-select-selection-item-remove:hover {
+  color: #7678d8 !important;
+}
