--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,14 @@
   }
 }
 
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hidden {
+  -ms-overflow-style: none; /* для IE и Edge */
+  scrollbar-width: none; /* для Firefox */
+}
+
 html {
   overflow: hidden;
 }
