--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,29 @@
   background: #515aca !important;
 }
 
+/* .ant-modal-footer button.ant-btn-primary {
+  background: #00ff11;
+  color: #161724;
+  font-weight: bold;
+}
+
+:where(.css-dev-only-do-not-override-11lehqq).ant-btn-default {
+  color: #161724;
+  font-weight: bold;
+}
+
+:where(.css-dev-only-do-not-override-11lehqq).ant-btn-primary:not(
+    :disabled
+  ):not(.ant-btn-disabled):hover {
+  background: #20223b !important;
+}
+
+.ant-btn-default:hover {
+  background: #20223b !important;
+  border-color: #20223b !important;
+  color: #ffffff !important;
+} */
+
 .anticon.anticon-close.ant-modal-close-icon svg {
   fill: #ffffff !important;
 }
