--- a/src/shared/elements/Select/MonsterSelect.scss
+++ b/src/shared/elements/Select/MonsterSelect.scss
@@ -5,7 +5,7 @@
   border-radius: 8px;
   color: white;
 
-  height: 42px;
+  min-height: 42px;
 
   &:hover {
     border-color: #36395a;
@@ -25,10 +25,21 @@
     background-color: #161724 !important;
     border: none;
     color: white;
+
+    display: flex; /* Flex-контейнер */
+    align-items: center; /* Центрирование содержимого по вертикали */
+    min-height: 42px; /* Убедитесь, что это соответствует высоте */
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .ant-select-selection-placeholder {
     color: #5f6280;
+
+    /* Эти стили центруют текст */
+    line-height: 42px; /* Совпадает с высотой */
+    display: block;
+    white-space: nowrap;
   }
 
   .ant-select-selection-item {
@@ -65,6 +76,23 @@
 
 .ant-select-item-option-active {
   background-color: #36395a !important;
+}
+
+.monster-select.ant-select.ant-select-multiple .ant-select-selector {
+  display: flex;
+  align-items: center;
+  min-height: 42px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.monster-select.ant-select.ant-select-multiple
+  .ant-select-selection-placeholder {
+  color: #5f6280;
+
+  line-height: 42px; /* Устанавливаем высоту строки */
+  display: block;
+  white-space: nowrap;
 }
 
 .monster-select.ant-select .ant-select-selection-item-remove {
