--- a/src/shared/elements/Switch/MonsterSwitch.scss
+++ b/src/shared/elements/Switch/MonsterSwitch.scss
@@ -21,10 +21,17 @@
     top: 2px;
     left: 2px;
     transition: left 0.2s;
+
+    &::before {
+      background-color: #515aca !important;
+    }
   }
 }
 
-:where(.css-dev-only-do-not-override-11lehqq).ant-switch.ant-switch-checked {
+:where(
+    .css-dev-only-do-not-override-11lehqq,
+    .ant-switch
+  ).ant-switch.ant-switch-checked {
   background-color: #161724 !important;
 
   .ant-switch-handle::before {
