--- a/src/shared/elements/DatePicker/MonsterDatePicker.scss
+++ b/src/shared/elements/DatePicker/MonsterDatePicker.scss
@@ -12,82 +12,82 @@
   }
 
   .ant-picker {
-    border-color: #383b66;
+    border-color: #383b66 !important;
   }
 
   .ant-picker-cell-selected .ant-picker-cell-inner {
-    background-color: #383b66;
-    color: white;
+    background-color: #383b66 !important;
+    color: white !important;
   }
 
   .ant-picker-dropdown {
-    background-color: #161724;
+    background-color: #161724 !important;
 
     .ant-picker-cell {
-      color: white;
+      color: white !important;
     }
 
     .ant-picker-cell-in-view.ant-picker-cell-today
       .ant-picker-cell-inner::before {
-      border-color: white;
+      border-color: white !important;
     }
   }
 
   .ant-picker-input > input::placeholder {
-    color: #5f6280;
+    color: #5f6280 !important;
   }
 
   &:hover {
-    color: white;
+    color: white !important;
   }
 
   .ant-picker-focused .ant-picker-input > input,
   .ant-picker-open .ant-picker-input > input {
-    color: white;
+    color: white !important;
   }
 
   .ant-picker-focused .ant-picker-suffix,
   .ant-picker-open .ant-picker-suffix {
-    color: white;
+    color: white !important;
   }
 
   .ant-picker-focused .ant-picker,
   .ant-picker-open .ant-picker {
-    border-color: #383b66;
+    border-color: #383b66 !important;
   }
 
   &.ant-picker-disabled {
-    background-color: #202132;
-    color: #5f6280;
-    border-color: #383b66;
+    background-color: #202132 !important;
+    color: #5f6280 !important;
+    border-color: #383b66 !important;
 
     .ant-picker-input > input {
-      color: #5f6280;
+      color: #5f6280 !important;
     }
 
     .ant-picker-suffix {
-      color: #5f6280;
+      color: #5f6280 !important;
     }
 
     &:hover {
-      border-color: #383b66;
+      border-color: #383b66 !important;
     }
   }
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-outlined:focus,
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-outlined:focus-within {
-  background-color: #161724;
+  background-color: #161724 !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-outlined:focus,
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-outlined:focus-within {
-  border-color: #383b66;
+  border-color: #383b66 !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-outlined:hover {
-  background-color: #161724;
-  border-color: #383b66;
+  background-color: #161724 !important;
+  border-color: #383b66 !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker:hover
@@ -96,20 +96,20 @@
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-disabled {
-  background-color: #202132;
-  color: #5f6280;
-  border-color: #383b66;
+  background-color: #202132 !important;
+  color: #5f6280 !important;
+  border-color: #383b66 !important;
 
   .ant-picker-input > input {
-    color: #5f6280;
+    color: #5f6280 !important;
   }
 
   .ant-picker-suffix {
-    color: #5f6280;
+    color: #5f6280 !important;
   }
 
   &:hover {
-    border-color: #383b66;
+    border-color: #383b66 !important;
   }
 }
 
@@ -119,13 +119,13 @@
 :where(
     .css-dev-only-do-not-override-11lehqq
   ).ant-picker-outlined[disabled]:hover:not([disabled]) {
-  background-color: #161724;
-  border-color: #383b66;
+  background-color: #161724 !important;
+  border-color: #383b66 !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-dropdown
   .ant-picker-panel-container {
-  background-color: #161724;
+  background-color: #161724 !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-dropdown
@@ -143,43 +143,56 @@
     .ant-picker-cell-disabled
   )
   .ant-picker-cell-inner {
-  background-color: #515aca;
+  background-color: #515aca !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-dropdown
   .ant-picker-cell
   .ant-picker-cell-inner {
-  color: white;
+  color: white !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-dropdown
   .ant-picker-header-view
   > button {
-  color: white;
+  color: white !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-dropdown
   .ant-picker-header
   button {
-  color: white;
+  color: white !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-dropdown
   .ant-picker-header
   > button:hover {
-  color: white;
+  color: white !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq).ant-picker-dropdown
   .ant-picker-content
   th {
-  color: white;
+  color: white !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq) a:hover {
-  color: white;
+  color: white !important;
 }
 
 :where(.css-11lehqq).ant-picker-outlined:hover {
   background-color: #161724 !important;
+  border-color: #383b66 !important;
+}
+
+:where(.css-11lehqq).ant-picker-outlined:focus,
+:where(.css-11lehqq).ant-picker-outlined:focus-within {
+  background-color: #161724 !important;
+  border-color: #383b66 !important;
+}
+
+:where(.css-11lehqq).ant-picker-outlined:focus,
+:where(.css-11lehqq).ant-picker-outlined:focus-within {
+  background-color: #161724 !important;
+  border-color: #383b66 !important;
 }
