--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,18 @@
   color: #ffffff !important;
 } */
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .anticon.anticon-close.ant-modal-close-icon svg {
   fill: #ffffff !important;
 }
